docs/1.130/recaptchaenterprise/v1beta1/recaptchaEnterpriseKey.md
---
permalink: /1.130/recaptchaenterprise/v1beta1/recaptchaEnterpriseKey/
---

# recaptchaenterprise.v1beta1.recaptchaEnterpriseKey



## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDisplayName(displayName)`](#fn-specwithdisplayname)
  * [`fn withResourceID(resourceID)`](#fn-specwithresourceid)
  * [`obj spec.androidSettings`](#obj-specandroidsettings)
    * [`fn withAllowAllPackageNames(allowAllPackageNames)`](#fn-specandroidsettingswithallowallpackagenames)
    * [`fn withAllowedPackageNames(allowedPackageNames)`](#fn-specandroidsettingswithallowedpackagenames)
    * [`fn withAllowedPackageNamesMixin(allowedPackageNames)`](#fn-specandroidsettingswithallowedpackagenamesmixin)
  * [`obj spec.iosSettings`](#obj-speciossettings)
    * [`fn withAllowAllBundleIds(allowAllBundleIds)`](#fn-speciossettingswithallowallbundleids)
    * [`fn withAllowedBundleIds(allowedBundleIds)`](#fn-speciossettingswithallowedbundleids)
    * [`fn withAllowedBundleIdsMixin(allowedBundleIds)`](#fn-speciossettingswithallowedbundleidsmixin)
  * [`obj spec.projectRef`](#obj-specprojectref)
    * [`fn withExternal(external)`](#fn-specprojectrefwithexternal)
    * [`fn withName(name)`](#fn-specprojectrefwithname)
    * [`fn withNamespace(namespace)`](#fn-specprojectrefwithnamespace)
  * [`obj spec.testingOptions`](#obj-spectestingoptions)
    * [`fn withTestingChallenge(testingChallenge)`](#fn-spectestingoptionswithtestingchallenge)
    * [`fn withTestingScore(testingScore)`](#fn-spectestingoptionswithtestingscore)
  * [`obj spec.wafSettings`](#obj-specwafsettings)
    * [`fn withWafFeature(wafFeature)`](#fn-specwafsettingswithwaffeature)
    * [`fn withWafService(wafService)`](#fn-specwafsettingswithwafservice)
  * [`obj spec.webSettings`](#obj-specwebsettings)
    * [`fn withAllowAllDomains(allowAllDomains)`](#fn-specwebsettingswithallowalldomains)
    * [`fn withAllowAmpTraffic(allowAmpTraffic)`](#fn-specwebsettingswithallowamptraffic)
    * [`fn withAllowedDomains(allowedDomains)`](#fn-specwebsettingswithalloweddomains)
    * [`fn withAllowedDomainsMixin(allowedDomains)`](#fn-specwebsettingswithalloweddomainsmixin)
    * [`fn withChallengeSecurityPreference(challengeSecurityPreference)`](#fn-specwebsettingswithchallengesecuritypreference)
    * [`fn withIntegrationType(integrationType)`](#fn-specwebsettingswithintegrationtype)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of RecaptchaEnterpriseKey

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec



### fn spec.withDisplayName

```ts
withDisplayName(displayName)
```

"Human-readable display name of this key. Modifiable by user."

### fn spec.withResourceID

```ts
withResourceID(resourceID)
```

"Immutable. Optional. The service-generated name of the resource. Used for acquisition only. Leave unset to create a new resource."

## obj spec.androidSettings

"Settings for keys that can be used by Android apps."

### fn spec.androidSettings.withAllowAllPackageNames

```ts
withAllowAllPackageNames(allowAllPackageNames)
```

"If set to true, it means allowed_package_names will not be enforced."

### fn spec.androidSettings.withAllowedPackageNames

```ts
withAllowedPackageNames(allowedPackageNames)
```

"Android package names of apps allowed to use the key. Example: 'com.companyname.appname'"

### fn spec.androidSettings.withAllowedPackageNamesMixin

```ts
withAllowedPackageNamesMixin(allowedPackageNames)
```

"Android package names of apps allowed to use the key. Example: 'com.companyname.appname'"

**Note:** This function appends passed data to existing values

## obj spec.iosSettings

"Settings for keys that can be used by iOS apps."

### fn spec.iosSettings.withAllowAllBundleIds

```ts
withAllowAllBundleIds(allowAllBundleIds)
```

"If set to true, it means allowed_bundle_ids will not be enforced."

### fn spec.iosSettings.withAllowedBundleIds

```ts
withAllowedBundleIds(allowedBundleIds)
```

"iOS bundle ids of apps allowed to use the key. Example: 'com.companyname.productname.appname'"

### fn spec.iosSettings.withAllowedBundleIdsMixin

```ts
withAllowedBundleIdsMixin(allowedBundleIds)
```

"iOS bundle ids of apps allowed to use the key. Example: 'com.companyname.productname.appname'"

**Note:** This function appends passed data to existing values

## obj spec.projectRef

"Immutable. The Project that this resource belongs to."

### fn spec.projectRef.withExternal

```ts
withExternal(external)
```

"The project for the resource\n\nAllowed value: The Google Cloud resource name of a `Project` resource (format: `projects/{{name}}`)."

### fn spec.projectRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.projectRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.testingOptions

"Immutable. Options for user acceptance testing."

### fn spec.testingOptions.withTestingChallenge

```ts
withTestingChallenge(testingChallenge)
```

"Immutable. For challenge-based keys only (CHECKBOX, INVISIBLE), all challenge requests for this site will return nocaptcha if NOCAPTCHA, or an unsolvable challenge if UNSOLVABLE_CHALLENGE. Possible values: TESTING_CHALLENGE_UNSPECIFIED, NOCAPTCHA, UNSOLVABLE_CHALLENGE"

### fn spec.testingOptions.withTestingScore

```ts
withTestingScore(testingScore)
```

"Immutable. All assessments for this Key will return this score. Must be between 0 (likely not legitimate) and 1 (likely legitimate) inclusive."

## obj spec.wafSettings

"Immutable. Settings specific to keys that can be used for WAF (Web Application Firewall)."

### fn spec.wafSettings.withWafFeature

```ts
withWafFeature(wafFeature)
```

"Immutable. Supported WAF features. For more information, see https://cloud.google.com/recaptcha-enterprise/docs/usecase#comparison_of_features. Possible values: CHALLENGE_PAGE, SESSION_TOKEN, ACTION_TOKEN, EXPRESS"

### fn spec.wafSettings.withWafService

```ts
withWafService(wafService)
```

"Immutable. The WAF service that uses this key. Possible values: CA, FASTLY"

## obj spec.webSettings

"Settings for keys that can be used by websites."

### fn spec.webSettings.withAllowAllDomains

```ts
withAllowAllDomains(allowAllDomains)
```

"If set to true, it means allowed_domains will not be enforced."

### fn spec.webSettings.withAllowAmpTraffic

```ts
withAllowAmpTraffic(allowAmpTraffic)
```

"If set to true, the key can be used on AMP (Accelerated Mobile Pages) websites. This is supported only for the SCORE integration type."

### fn spec.webSettings.withAllowedDomains

```ts
withAllowedDomains(allowedDomains)
```

"Domains or subdomains of websites allowed to use the key. All subdomains of an allowed domain are automatically allowed. A valid domain requires a host and must not include any path, port, query or fragment. Examples: 'example.com' or 'subdomain.example.com'"

### fn spec.webSettings.withAllowedDomainsMixin

```ts
withAllowedDomainsMixin(allowedDomains)
```

"Domains or subdomains of websites allowed to use the key. All subdomains of an allowed domain are automatically allowed. A valid domain requires a host and must not include any path, port, query or fragment. Examples: 'example.com' or 'subdomain.example.com'"

**Note:** This function appends passed data to existing values

### fn spec.webSettings.withChallengeSecurityPreference

```ts
withChallengeSecurityPreference(challengeSecurityPreference)
```

"Settings for the frequency and difficulty at which this key triggers captcha challenges. This should only be specified for IntegrationTypes CHECKBOX and INVISIBLE. Possible values: CHALLENGE_SECURITY_PREFERENCE_UNSPECIFIED, USABILITY, BALANCE, SECURITY"

### fn spec.webSettings.withIntegrationType

```ts
withIntegrationType(integrationType)
```

"Immutable. Required. Describes how this key is integrated with the website. Possible values: SCORE, CHECKBOX, INVISIBLE"